--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,4 +8,6 @@
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.example.localhackday2017.ItemListActivity"
-    tools:listitem="@layout/item_list_content" />
+    tools:listitem="@layout/item_list_content" >
+
+</android.support.v7.widget.RecyclerView>
