--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -23,15 +23,16 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="492dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:layout_editor_absoluteY="75dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            >
+            android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -41,11 +42,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/create_event_name"
-                    android:singleLine="true"/>
+                    android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
-            <LinearLayout android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -56,11 +60,14 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/create_event_location" />
                 </android.support.design.widget.TextInputLayout>
-                <Button android:layout_height="match_parent"
+
+                <Button
                     android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="0"
-                    android:text="@string/create_event_location_autodetect"/>
+                    android:text="@string/create_event_location_autodetect" />
             </LinearLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -69,8 +76,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/create_event_description"
-                    android:minLines="5"/>
+                    android:minLines="5" />
             </android.support.design.widget.TextInputLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -80,19 +88,22 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/create_event_tags" />
             </android.support.design.widget.TextInputLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/create_event_visibility"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+
                 <android.support.v7.widget.AppCompatSpinner
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:entries="@array/create_event_visibilities"/>
+                    android:entries="@array/create_event_visibilities" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
