--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -39,12 +39,19 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/create_event_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/create_event_name"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.v7.widget.AppCompatButton android:id="@+id/create_event_pick_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Date:"
+                android:onClick="selectDate"
+                style="@style/Widget.AppCompat.Button.Borderless"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -73,6 +80,7 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/create_event_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/create_event_description"
@@ -84,6 +92,7 @@
                 android:layout_height="wrap_content">
 
                 <com.example.localhackday2017.TagsEditText
+                    android:id="@+id/create_event_tags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/create_event_tags" />
