--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -9,15 +9,23 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/cardview_dark_background"
-        app:cardElevation="5dp">
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:elevation="0dp"
+        android:padding="15dp"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardElevation="3dp">
 
         <TextView
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:theme="@style/AppTheme" />
     </android.support.v7.widget.CardView>
     android:dividerHeight="10dp"
 </LinearLayout>
